2004-06-10  John BouAntoun  <jba-mono@optusnet.com.au>
	* Gui/Dialogs/GotoLineNumberDialog.cs: made dialog close on pressing
	escape key.

2004-06-10  John BouAntoun  <jba-mono@optusnet.com.au>
	* Gui/SourceEditorBuffer.cs: Added g_utf8_validate check to LoadText, 
	refactored LoadText and LoadFile usage
	* Search/DefaultFind.cs: Added check for empty string .Text property
	of a source buffer in find routine. BuildTextIterator hangs on 
	empty strings for some reason

2004-06-06  John Luke  <jluke@cfl.rr.com>

	* Gui/SourceEditorWidget.cs: set PolicyType.Automatic for scrolling
	fixes bug #58767

2004-05-28  Todd Berman  <tberman@sevenl.net>

	* Gui/OptionPanels/CodeTemplatePanel.cs:
	* CodeCompletion/CompletionWindow.cs: update to reflect gtk-sharp api
	out -> ref change

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* Gui/SourceEditorView.cs: Update MonodocResolver for new changes.
	* CodeCompletion/CodeCompletionDataProvider.cs: Update IsAsResolver
	stuff for new ParserService.

2004-05-24  Lluis Sanchez Gual  <lluis@ximian.com>

	* Gui/SourceEditorBuffer.cs: Close the files used to read the text.
	
	* Gui/SourceEditorView.cs: Provide the project of the current file when
	  creating the code completion window.
	  
	* CodeCompletion/CodeCompletionData.cs: Removed ClassProxy stuff.
	
	* CodeCompletion/CompletionWindow.cs: Added project parameter to ctor.
	
	* CodeCompletion/ICompletionDataProvider.cs,
	  CodeCompletion/CommentCompletionDataProvider.cs,
	  CodeCompletion/TemplateCompletionDataProvider.cs,
	  CodeCompletion/CodeCompletionDataProvider.cs: Added project parameter
	  to GenerateCompletionData().
	  
	* InsightWindow/MethodInsightDataProvider.cs
	  InsightWindow/InsightWindow.cs: Added project parameter to constructor.
	  
	* InsightWindow/IInsightDataProvider.cs,
	  InsightWindow/IndexerInsightDataProvider.cs: Added project parameter to
	  SetupDataProvider.

2004-05-22  Todd Berman  <tberman@sevenl.net>
